# vita

./: .gitignore  CMakeLists.txt  CodingGuidelines.md  CodingStandard.md  DevNotes.md  LICENSE  README.md  build.bat  build.sh  test.sh
archive/: mat.c  mat.h  test_mat.c
docs/: config
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  argopt_8h.html  argopt_8h.js  argopt_8h__dep__incl.dot  argopt_8h__incl.dot  argopt_8h_source.html  classes.html  common_8h.html  common_8h_source.html  comparison_8h.html  comparison_8h.js  comparison_8h__dep__incl.dot  comparison_8h__incl.dot  comparison_8h_source.html  compiler_8h.html  compiler_8h_source.html  conv_8h.html  conv_8h.js  conv_8h__dep__incl.dot  conv_8h__incl.dot  conv_8h_source.html  core_8h.html  core_8h.js  core_8h__dep__incl.dot  core_8h__incl.dot  core_8h_source.html  datetime_8h.html  datetime_8h_source.html  debug_8h.html  debug_8h.js  debug_8h__dep__incl.dot  debug_8h__incl.dot  debug_8h_source.html  dir_000001_000002.html  dir_000001_000006.html  dir_000002_000001.html  dir_000004_000002.html  dir_000005_000001.html  (+196 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  (+49 more)
docs/wiki/: VITA.md  page1.md  page10.md  page2.md  page3.md  page4.md  page5.md  page6.md  page7.md  page8.md  page9.md
imgs/: attribution.html
inc/vita/: vita.h
include/: comet.h  vita.h
include/algebra/: matrix.h
include/vita/: args.h  getopt.h  logger.h
src/: test_file3.txt  vita.c
src/algebra/: matrix.c
src/vita/: args.c  getopt.c  logger.c  vita.c
test/: Makefile
test/src/: array2d_test.c  array_test.c  general_test.c  memhandler_test.c  search_test.c  strbuf_test.c  test.c  to_test.c
testing/: Makefile
testing/src/: test.c  test_str.c
tests/: Makefile
tests/other/: test_file.txt  test_file2.txt  test_file3.txt  test_file4.txt
tests/src/: args_test.c  mat_test.c  math_test.c  path_test.c  plist_test.c  str_test.c  test_argopt.c  test_args.c  test_compiler.c  test_conv.c  test_core.c  test_datetime.c  test_debug.c  test_fileio.c  test_log.c  test_log_error.log.txt  test_log_info.log.txt  test_mallocator.c  test_mat.c  test_math.c  test_path.c  test_plist.c  test_sockets_client.c  test_sockets_server.c  test_span.c  test_str.c  test_time.c  test_vec.c  test_version.c  vec_test.c
wiki/: VITA.md  page1.md  page2.md
(+95 files in other folders)
